[package]
name = "wp-blocks-rs"
version = "0.1.1"
edition = "2024"
description = "Rust port of WordPress/Elementor package wp-blocks-rs"
license = "GPL-2.0"
repository = "https://github.com/wp-rust/wp-blocks-rs"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
